@@ -1,3 +1,12 @@
+fee (05/02/02)
+-------------------
+
+Additions
+ + Applied patch #513117 Combat Window
+   http://seq.sourceforge.net/showthread.php?s=&threadid=467 
+   
+
+
 Andon (04/Feb/02)
 -------------------
 
